<resources>
    <string name="app_name" translatable="false">Your movies</string>
    <string name="SignIn">Sign in</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Account">Dont have an account yet? click to register</string>
    <string name="SignUp">Sign Up</string>
    <string name="Register">Register</string>
    <string name="title">title</string>
    <string name="year">year</string>
    <string name="add_picture">add_picture</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="delete_movie_msg">Are you sure you want to delete this movie from the list?</string>
    <string name="delete_movie_btn">Delete</string>
    <string name="delete_movie_cancel_btn">Cancel</string>
    <string name="orders">Click for more details\nLong click for editing\nSwipe to delete</string>
    <string name="edit_movie">Edit movie</string>
    <string name="add_photo">Add Photo</string>
    <string name="pls_fill">Please fill the following details:</string>

    <string name="add_movie_title">Add Movie Title</string>
    <string name="add_movie_year">Add Movie Year</string>
    <string name="add_movie_description">Add Movie Description</string>
    <string name="emptystrings">Empty email or password</string>
    <string name="LoginSuccess">Login successful</string>
    <string name="valid_email">Not a valid email</string>
    <string name="RegisterSuccess">Registration successful</string>
    <string name="SaveMovie">Save Movie!</string>
    <string name="DataInsert">Data insert successfully</string>
    <string name="updateData">Data Update successfully</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>