<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.all_movies.EditMovieFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1D20">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:text="@string/edit_movie"
            android:gravity="center"
            android:paddingBottom="5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BFAFDAFA"
            app:counterTextColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:maxLength="40"
                android:hint="@string/add_movie_title"
                android:id="@+id/item_title"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#BFAFDAFA"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:maxLength="4"
                android:hint="@string/add_movie_year"
                android:id="@+id/item_year_release"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>




        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="300dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="#1B1D20"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/update_image"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:background="#1B1D20"
                    android:contentDescription="@string/add_picture"
                    android:autofillHints="add pic"
                    android:src="@drawable/add_photo" />

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/update_image"
                    android:layout_alignTop='@+id/update_image'
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="9dp"
                    android:textColor="@color/white"
                    android:shadowColor="@color/black"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="4"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:id="@+id/text_year"
                    android:layout_alignEnd="@+id/update_image"
                    android:layout_alignBottom="@+id/update_image"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="right"
                    android:textColor="@color/white"
                    android:shadowColor="@color/black"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="4"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:id="@+id/text_genre"
                    android:layout_alignStart="@+id/update_image"
                    android:layout_alignBottom="@+id/update_image"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:shadowColor="@color/black"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="4"
                    android:textStyle="bold"
                    android:textSize="18sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_movie"
                android:id="@+id/update_btn"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:backgroundTint="#2AD89999"
                android:gravity="center"/>
            <Space
                android:layout_width="20dp"
                android:layout_height="20dp"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_movie"
                android:id="@+id/delete_btn"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:backgroundTint="#2AD89999"
                android:gravity="center"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>